@@ -1,3 +1,9 @@
+2007-02-11  Richard Dale  <rdale@foton.es>
+
+	* Don't call a destructor is the instance was allocated in the C++ world
+	* If a destructor has been called then set the ptr field on the 
+	  smokeqyoto_object struct to 0, and don't call methods on it again.
+
 2007-02-10  Arno Rehn  <arno@arnorehn.de>
 
 	* If the aboutToQuit() signal is catched, no destructors will be called.
